tools: codestyle fixes, formatting updates to core/router/apps